feat(WatchlistServiceTests): save watchlist test